--- a/css/sPosting.css
+++ b/css/sPosting.css
@@ -13,9 +13,9 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 140px; }
 .dateSelec #dateClick:hover { background: #eee;}
 
 .dateSelec .dateInput { display: flex; align-items: center; justify-content: space-around; } 
-.dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px; transition: all .2s; } 
+.dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px; outline: 2px solid transparent; transition: all .2s; } 
 .dateSelec .dpDiv::before { content: ''; position: absolute; top: 27%; left: 7%; width: 20px; height: 20px; background: url(../source/dateGr.png) center center; background-size: cover; } 
-.dateSelec .dpDiv:focus-within { border-color: #2ce126; } 
+.dateSelec .dpDiv:focus-within { border-color: transparent; outline: 2px solid #2ce126; } 
 .dpDiv .datePick { width: 100%; font-size: 14px; font-family: pRegular; } 
 
 .saleSelec { margin-top: 15px; display: flex; align-items: center; }
@@ -28,9 +28,9 @@ input[name="saleDay"] + label::before { content: '✓'; color: transparent; posi
 input[name="saleDay"]:checked + label { padding-left: 30px; background: #eee;}
 input[name="saleDay"]:checked + label::before { color: #000; }
 
-.saleDrop { position: relative; width: 200px; display: inline-block; background-color: #fff; vertical-align: middle; font-size: 14px; padding: 10px; padding-right: 100px; margin-left: 30px; border-radius: 5px; text-indent: 0.01px; font-family: pRegular; text-overflow: ''; appearance: none; border: 1px solid #ddd; border-radius: 5px; cursor: pointer; } 
-.saleDrop::before { position: absolute; content: '\25BC'; width: 20px; height: 20px; right: 0; top: 0;  font-size: 15px; pointer-events: none; z-index: 10;}  
-
+.saleDrop { width: 200px; background-color: #fff; vertical-align: middle; font-size: 14px; padding: 10px; padding-right: 100px; margin-left: 30px; border-radius: 5px; text-indent: 0.01px; font-family: pRegular; text-overflow: ''; appearance: none; border: 1px solid #ddd; outline: 0; border-radius: 5px; outline: 2px solid transparent; cursor: pointer; transition: all .2s;} 
+.saleDrop:focus { border-color: transparent; outline: 2px solid #2ce126; }
+.saleDrop option { padding: 5px 0;}
 
 /* ----------- date custom --------------*/
 
@@ -82,19 +82,20 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .imgArea { display: flex; align-items: center; margin: 25px 0;  width: 100%; height: 460px; overflow: hidden; background: #eee; border-radius: 8px; } 
 .imgArea img { width: 100%; } 
 
-.titleBox input { margin: 10px 0 30px 0; padding: 10px 15px; width: 97%; border-radius: 8px; border: 1px solid var(--color-line); font-size: 18px; font-family: pMedium; transition: all .2s; }
-.titleBox input:focus { border-color: #2ce126; } 
+.titleBox input { margin: 10px 0 30px 0; padding: 10px 15px; width: 97%; border-radius: 8px; border: 1px solid var(--color-line); outline: 2px solid transparent; font-size: 18px; font-family: pMedium; transition: all .2s; }
+.titleBox input:focus { border-color: transparent; outline-color: #2ce126; } 
 
 .contxtAll span { margin-left: 5px; color: #333; font-size: 20px; font-family: pBold;}
-.contextBox { padding: 15px; margin: 25px 0; border: 1px solid var(--color-line);border-radius: 10px; }
+.contextBox { padding: 15px; margin: 25px 0; border: 1px solid var(--color-line); outline: 2px solid transparent; border-radius: 10px; }
 .contextBox textarea { width: 100%; height: 300px;  font-family: pRegular; font-size: 16px; line-height: 140%; resize: none;}
-.contextBox:focus-within { border-color: #2ce126; } 
+.contextBox:focus-within { border-color: transparent; outline-color: #2ce126; } 
 
 .infoBottom { display: flex; align-items: center; }
-.infoBottom div { width: 45%; margin-right: 50px; display: flex; align-items: center;}
+.infoBottom div { margin-left: 10px; display: flex; align-items: center;}
 .infoBottom div span { margin-right: 30px; font-family: pBold; font-size: 17px;}
-.infoBottom .writer { width: 380px; height: 40px; border-radius: 5px; border: 1px solid #ddd; background: #f8f8f8;}
-.infoBottom input[name="price"] {  width: 380px; height: 40px; padding: 0 10px; border-radius: 5px; border: 1px solid #ddd; font-family: pRegular; }
+.infoBottom .writer { width: 380px; height: 40px; margin-right: 150px; border-radius: 5px; border: 1px solid #ddd; background: #f8f8f8;}
+.infoBottom input[name="price"] {  width: 420px; height: 40px; padding: 0 10px; border-radius: 5px; border: 1px solid #ddd; outline: 2px solid transparent; font-size: 15px; font-family: pRegular; transition: all .2s;}
+.infoBottom input[name="price"]:focus { border-color: transparent; outline-color: #2ce126;}
 
 input[name="price"]::-webkit-outer-spin-button,
 input[name="price"]::-webkit-inner-spin-button {appearance: none;}
