--- a/css/store.css
+++ b/css/store.css
@@ -4,14 +4,13 @@ h3 { position: relative; margin-bottom: 25px; color: #222; font-size: 23px; font
 h3::before { content: ""; position: absolute; top: 12px; left: -5px; width: 135px; height: 15px; background: #41ff3b78; border-radius: 3px; z-index: -10; }
 .ctryBanner { display: flex; align-items: center; justify-content: space-between; padding-bottom: 60px; border-bottom: 1px solid #ddd;}
 .ctryBanner .ctry { position: relative; display: flex; align-items: center; justify-content: center; width: 165px; height: 215px; overflow: hidden; border-radius: 15px; }
-.ctryBanner .ctry .ctryBg { transition: all .3s; height: 100%; filter: brightness(0.85); }
+.ctryBanner .ctry .ctryBg { transition: all .3s; height: 100%; filter: brightness(0.8); }
 .ctryBanner .ctry:hover .ctryBg { transform: scale(1.15); filter: brightness(0.95); }
 
 .ctryBanner .ctryTxt { position: absolute; top: 25px; left: 25px; transition: all .3s;}
 .ctryTxt h4 { font-size: 22px; font-family: pBold; color: #fff; text-shadow: 1px 1px 3px #181818b8;}
 .ctryTxt p { margin-top: 10px; color: #fff; font-size: 15px; text-shadow: 1px 1px 3px #0c0c0cd7;}
-.ctryTxt .sCnt { color: var(--color-sub); }
-
+.ctryTxt .sCnt { position: relative; color: var(--color-sub); font-family: pBold; font-size: 16px; }
 /* ------------------ slider --------------------- */
 .slider .bn { height: 60vh; margin: 60px 0 50px 0;  }
 .bContent { width: 100%; height: 100%; display: flex; align-items: center; background-repeat: no-repeat; border-radius: 15px;}
