--- a/css/cDetail.css
+++ b/css/cDetail.css
@@ -11,6 +11,8 @@ section { min-height: calc(100vh - 240px); padding: 0 13%; margin-top: 200px;}
 .infoTitle .btn { opacity: .5; cursor: pointer; transition: all .2s;}
 .infoTitle .btn:hover { opacity: 1; }
 .infoTitle .backBtn { width: 18px; height: 18px; background: url(../source/arrow_l.png) center center; background-size: cover;  }
+
+.infoTitle .uptBtn { margin-right: 10px; width: 24px; height: 24px; background: url(../source/edit.png) center center; background-size: cover; }
 .infoTitle .delBtn { width: 24px; height: 24px; background: url(../source/delIco.png) center center; background-size: cover; }
 
 .schInfo .schDays { width: 100%; height: 65px; margin-bottom: 30px; display: flex; align-items: center; justify-content: center; color: #000000d1; background: #8242f024; border-radius: 10px; font-family: pRegular; font-size: 18px; letter-spacing: 1px; }
