--- a/css/sDetail.css
+++ b/css/sDetail.css
@@ -2,15 +2,16 @@ section { min-height: calc(100vh - 240px); padding: 0 13%; margin: 140px 0 200px
 .banner { display: flex; align-items: center; width: 100%; height: 450px; border-radius: 15px; overflow: hidden; } 
 section .bnImg { width: 100%; } 
 
-.postingBtn { display: flex; align-items: center; padding-top: 25px; } 
-.postingBtn button { width: 52px; height: 30px; border-radius: 5px; background-color: #ddd; font-family: pMedium; font-size: 14px; color: rgb(27, 27, 27); margin-left: 10px; cursor: pointer; transition: all .3s; } 
-.postingBtn button:hover { background-color: #55ed50aa; } 
-
 .postContent { display: flex; margin-top: 25px; justify-content: space-between; } 
-.pLeft { width: 800px; } 
+
+.pLeft { width: 850px; } 
 .pLeft strong { font-family: pSemi; font-size: 25px; } 
-.pLeft .titleBottom { display: flex; align-items: center; justify-content: space-between;}
-.itemPrice { font-size: 27px; font-family: pBold;}
+.pLeft .titleBottom { padding: 50px 0 30px 0; display: flex; align-items: center; justify-content: space-between; border-bottom:1px solid var(--color-line) ;}
+.postingBtn { display: flex; align-items: center; } 
+.postingBtn button {  margin-right: 10px; width: 52px; height: 30px; border-radius: 5px; background-color: #ddd; font-family: pMedium; font-size: 14px; color: rgb(27, 27, 27); cursor: pointer; transition: all .3s; } 
+.postingBtn button:hover { background-color: #55ed50aa; } 
+.itemPrice { color: #222; font-size: 33px; font-family: pBold;}
+.itemPrice span { font-size: 22px; font-family: pMedium;}
 
 .postText { margin-top: 31px; font-size: 16px; font-family: pLight; line-height: 1.5em; min-height: 100px; word-break: break-all; } 
 
@@ -18,27 +19,45 @@ section .bnImg { width: 100%; }
 .postDV span { padding-right: 5px; } 
 .postDV p { padding: 0 5px 0 15px; } 
 
-.pRight { border: solid 1px var(--color-line); width: 320px; border-radius: 10px; } 
+.pRight { display: flex; flex-direction: column; align-items: flex-start; justify-content: space-between; width: 350px; border-radius: 10px;  border: solid 1px var(--color-line);}
+.rightWrap { margin: 0 auto; padding: 20px; }
+
+.chTxt { padding: 20px 0 10px 0; font-size: 18px; font-family: pSemi; }
+.priceCnt { display: flex; align-items: center; justify-content: space-between; padding: 20px; background: #ebe4f8b7; border-radius: 10px;}
+.priceCnt .chosenDay { margin-top: 5px; color: #555; font-size: 14px; }
+
+.cntCtrl { display: flex; align-items: center; }
+.cntCtrl .number { width: 25px; font-size: 20px; font-family: pSemi; text-align: center; }
+.cntCtrl .numBtn { display: inline-block; width: 30px; height: 30px; margin: 0 10px; font-size: 22px; line-height: 27px; color: var(--color-main); background-color: #fff; border-radius: 20px; border: 1px solid var(--color-main); text-align: center; cursor: pointer; transition: all .2s;}
+.cntCtrl .numBtn:hover { background: #ebe4f8; }
+
+.payInfo span { color: #777; display: inline-block;  padding: 20px 0 5px 0; font-size: 14px; font-family: pSemi;}
+.payInfo p { color: #888; font-size: 13px; font-family: pLight; line-height: 125%;}
+.goPay { width: 100%; margin-top: 20px; padding: 20px 0; font-size: 19px; font-family: pBold; color: #fff; background: var(--color-main); border-radius: 0 0 10px 10px; cursor: pointer; }
 
 
+/* --------------- calendar ---------------- */
 .date-picker { position: relative; } 
-.date-picker__calendar { left: 0; position: absolute; top: 100%; width: 274px; overflow: 0; transition: opacity 0.2s ease-out, visibility 0.2s step-start 0.2s; visibility: hidden; } 
+.date-picker__calendar { left: 0; position: absolute; top: 100%; width: 300px; overflow: 0; transition: opacity 0.2s ease-out, visibility 0.2s step-start 0.2s; visibility: hidden; } 
 .date-picker__calendar_visible { opacity: 1; transition-delay: 0s; visibility: visible; } 
 
-.calendar { padding: 10px; width: 274px; color: #1e2633; font-family: pRegular; line-height: 1.2; text-align: center; border: 3px solid #edeff2; user-select: none; } 
-.calendar__header { position: relative; padding: 10px 35px; font-size: 14px; font-weight: 700; letter-spacing: 0.1em; } 
-.calendar__year { color: #b3b3b3; } 
+.calendar { padding: 10px; font-family: pRegular; line-height: 1.2; text-align: center; border: 2px solid #edeff2; border-radius: 8px; user-select: none; } 
+.calendar__header { position: relative; padding: 10px 35px; font-size: 16px; font-family: pBold; letter-spacing: 0.5px; } 
+.calendar__year { color: var(--color-main); } 
 .calendar__btn { position: absolute; top: 8px; display: block; height: 20px; padding: 0; width: 20px; text-indent: -9999px; background: transparent; border: none; cursor: pointer; outline: none; overflow: hidden; } 
-.calendar__btn:before { content: ""; position: absolute; top: 6px; display: block; height: 8px; width: 8px; border-left: 1px solid #1e2633; border-top: 1px solid #1e2633; transform-origin: center; } 
+.calendar__btn:before { content: ""; position: absolute; top: 6px; display: block; height: 8px; width: 8px; border-left: 1px solid #000; border-top: 1px solid #000; transform-origin: center; } 
 .calendar__btn_prev { left: 10px; } 
 .calendar__btn_prev:before { left: 8px; transform: rotate(-45deg); } 
 .calendar__btn_next { right: 10px; } 
 .calendar__btn_next:before { right: 8px; transform: rotate(135deg); } 
 .calendar__btn_disabled { pointer-events: none; } 
-.calendar__btn_disabled:before { border-color: #b2b2b2; } 
+.calendar__btn_disabled:before { border-color: #a0a0a0; } 
 .calendar__btn:hover:before { border-color: var(--dark-yellow); } 
 .calendar__table { margin-top: 8px; width: 100%; table-layout: fixed; } 
 .calendar__table-col-header { padding: 12px 0; color: #b2b2b2; font-size: 12px; letter-spacing: 0.1em; } 
 .calendar__table-cell { padding: 6px 0; color: #1e2633; font-size: 14px; font-weight: 700; letter-spacing: 0.05em; cursor: pointer; } 
 .calendar__table-cell_disabled { color: #d3dbe8; pointer-events: none; } 
-.calendar__table-cell_selected, .calendar__table-cell:hover { color: var(--dark-yellow); } 
+.calendar__table-cell_selected { color: #fff; background: var(--color-main); border-radius: 15px;}
+.calendar__table-cell:hover { color: var(--dark-yellow); } 
+
+/* ---------------------- */
