--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -1,28 +1,31 @@
 @import "./reset.css";
+body { cursor: url(../source/cursor_Commom.cur), auto !important; }
+/* body { cursor: none;} */
+
 header { position: fixed; top: 0; z-index: 100; width: 100%; background: #fff; box-shadow: 0 2px 5px #a9a9a95c; } 
 header .headLogo { width: 170px; margin-right: 30px; } 
 header nav { display: flex; align-items: center; padding: 20px 8% 20px 8%; } 
 
 .gnb { width: 100%; display: flex; justify-content: space-between; align-items: center; } 
 .gnb .gnbTab { display: flex; justify-content: center; align-items: center; } 
-.gnb .gnbTab li { margin-right: 20px; font-size: 18px; }
+.gnb .gnbTab li { margin-right: 20px; font-size: 18px; } 
 
-.gnb .gnbTab li a { padding-bottom: 5px;  transition: all .2s;}
-.gnbTab li a:hover { color: var(--color-main);}
-.gnbTab li a.active { color: var(--color-main); border-bottom: 2px solid var(--color-main);}
+.gnb .gnbTab li a { padding-bottom: 5px; transition: all .2s; } 
+.gnbTab li a:hover { color: var(--color-main); } 
+.gnbTab li a.active { color: var(--color-main); border-bottom: 2px solid var(--color-main); } 
 
-.gnb .userHead { position: relative; padding-top: 10px; display: flex; align-items: center;} 
+.gnb .userHead { position: relative; padding-top: 10px; display: flex; align-items: center; } 
 .gnb .userHead .msgImg { margin-right: 30px; width: 32px; opacity: .6; transition: all .2s; cursor: pointer; } 
-.userHead .msgImg:hover { opacity: 1; }
-.userHead .userImg { width: 45px; border-radius: 10px; cursor: pointer; }
+.userHead .msgImg:hover { opacity: 1; } 
+.userHead .userImg { width: 45px; border-radius: 10px; cursor: pointer; } 
 
-.gnbBottom { display: flex; padding: 0 8.5%; margin-bottom: 20px; }
+.gnbBottom { display: flex; padding: 0 8.5%; margin-bottom: 20px; } 
 
-.gnbBottom a { display: flex; align-items: center; padding: 6px 15px; margin-right: 10px; border-radius: 13px; font-size: 16px; transition: all .2s;} 
-.gnbBottom a:hover { background: #eee;}
-.gnbBottom a.active { background-color: var(--yellow);}
-.gnbBottom img { width: 20px; margin-right: 10px;}
-.together img { width: 25px; margin-bottom: 2px;} 
+.gnbBottom a { display: flex; align-items: center; padding: 6px 15px; margin-right: 10px; border-radius: 13px; font-size: 16px; transition: all .2s; } 
+.gnbBottom a:hover { background: #eee; } 
+.gnbBottom a.active { background-color: var(--yellow); } 
+.gnbBottom img { width: 20px; margin-right: 10px; } 
+.together img { width: 25px; margin-bottom: 2px; } 
 
 .userList { width: 100px; display: none; position: absolute; padding: 5px 8px; top: 129%; left: 25%; border-radius: 10px; background-color: #fff; box-shadow: 1px 3px 5px #a9a9a984; } 
 .userList li { padding: 9px 13px; margin: 5px auto; text-align: center; border-radius: 7px; font-size: 15px; transition: all .3s; cursor: pointer; } 
@@ -32,12 +35,41 @@ header nav { display: flex; align-items: center; padding: 20px 8% 20px 8%; }
 .userList li:not(:first-child):hover { background: #ffd43871; } 
 
 /* ------- 로그인 회원가입 페이지 ---------- */
-nav .account a { padding: 5px 10px; margin-right: 5px; border-radius: 5px; font-size: 15px; transition: all .2s;}
-.account a:hover { color: var(--color-main); background: #8242f017;}
+nav .account a { padding: 5px 10px; margin-right: 5px; border-radius: 5px; font-size: 15px; transition: all .2s; } 
+.account a:hover { color: var(--color-main); background: #8242f017; } 
 
 
 /* --------------------- footer --------------------------- */
 footer { display:flex; align-items: flex-start; justify-content: center; flex-direction: column; padding: 20px 10% 30px 10%; height: 190px; font-size: 13px; font-family: pLight; background: #dedede; } 
 footer img { margin: 0 0 15px -5px; width: 200px; filter: drop-shadow(1px 1px 2px #0000006e); } 
-footer a { color: #222;}
+footer a { color: #222; } 
 footer p { margin-top: 10px; color: #222; } 
+
+
+/* ----------------------- mouse -------------------------- */
+/* .cursor {
+    width: calc(100vw * 18 / 1920);
+    height: calc(100vw * 18 / 1920);
+    border-radius: 50%;
+    background-color: var(--yellow);
+    position: absolute;
+    z-index: 150;
+    top: 0;
+    right: 0;
+    transform: translate(-50%, -50%);
+    transform-origin: 100% 100%;
+    transition: transform 0.3s ease;
+    transition-property: background, transform;
+}
+
+.cursor_follower {
+    position: absolute;
+    width: calc(100vw * 50 / 1920);
+    height: calc(100vw * 50 / 1920);
+    z-index: 120;
+    opacity: .4;
+    border: 3px solid var(--color-sub);
+    background: transparent;
+    border-radius: 50%;
+    user-select: none;
+} */
