--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -1,6 +1,11 @@
 @import "./reset.css";
+/*
 body { cursor: url(../source/cursor_Commom.cur), auto !important; }
-/* body { cursor: none;} */
+
+*/
+/* 
+*/
+body { cursor: none;} 
 
 header { position: fixed; top: 0; z-index: 100; width: 100%; background: #fff; box-shadow: 0 2px 5px #a9a9a95c; } 
 header .headLogo { width: 170px; margin-right: 30px; } 
@@ -47,29 +52,36 @@ footer p { margin-top: 10px; color: #222; }
 
 
 /* ----------------------- mouse -------------------------- */
-/* .cursor {
+/* 
+*/
+.cursor {
+    visibility: visible;
     width: calc(100vw * 18 / 1920);
     height: calc(100vw * 18 / 1920);
     border-radius: 50%;
     background-color: var(--yellow);
     position: absolute;
-    z-index: 150;
+    z-index: 200;
     top: 0;
     right: 0;
     transform: translate(-50%, -50%);
     transform-origin: 100% 100%;
-    transition: transform 0.3s ease;
+    transition: all 0.3s ease;
     transition-property: background, transform;
 }
 
 .cursor_follower {
     position: absolute;
-    width: calc(100vw * 50 / 1920);
-    height: calc(100vw * 50 / 1920);
-    z-index: 120;
+    width: calc(100vw * 60 / 1920);
+    height: calc(100vw * 60 / 1920);
+    z-index: 150;
     opacity: .4;
-    border: 3px solid var(--color-sub);
-    background: transparent;
+    border: 2px solid var(--color-main);
     border-radius: 50%;
     user-select: none;
-} */
+    transform: all .3s ease;
+} 
+
+.sHover { visibility: hidden; }
+.sHover_f { border: none; background: var(--color-main); filter: blur(3px); transform: scale(1.3); opacity: .2; }
+.cHover_f { border: none; background: var(--color-sub); filter: blur(3px); transform: scale(1.3); opacity: .2; }
