--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 .mainBanner { display: flex; align-items: center; justify-content: center; position: relative; height: 95vh; background: url(../source/mainBn.png) center center fixed; background-size: cover; } 
 .mainCon { display: flex; flex-direction: column; align-items: center; } 
 .mainBnLogo { width: 550px; filter: drop-shadow(3px 3px 4px #00000052);} 
-.mainCon p { width: 660px; text-align: center; color: #fff; font-size: 20px; font-family: pLight; line-height: 140%; text-shadow: 1px 1px 4px #000000b2;} 
+.mainCon p { width: 660px; text-align: center; color: #fff; font-size: 20px; font-family: pRegular; line-height: 140%; text-shadow: 1px 1px 4px #000000b2;} 
 .mainCon .boldTxt { font-family: pSemi;}
 
 .scrollDown { position: absolute; left: 50%; bottom: 5%; padding-top: calc( 100vw * 70 / 1920 ); color: #666; font-size: calc( 100vw * 16 / 1920 ); font-family: pRegular; cursor: pointer; } 
@@ -16,8 +16,6 @@
 50% { opacity: 1; } 
 100% { transform: rotate(-45deg) translate(-20px, 20px); opacity: 0; } 
  }
-
-
 
 .mainSection { padding: 0 12%; margin: 30px 0 100px 0; } 
 .mainSection .titleTxt { position: relative; margin-top: 40px; font-size: 25px; font-family: pBold; } 
