--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -93,16 +93,16 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .submitBtn:hover { background: #ffd4389f;}
 
 /* --------------------- modal ---------------------------- */
-.modalBg { visibility: hidden; opacity: 0; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.599); z-index: 50; transition: all .3s ease; } 
+.modalBg { visibility: hidden; opacity: 0; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.599); z-index: 100; transition: all .3s ease; } 
 .modalBg.active { visibility: visible; opacity: 1; } 
-.locModal { position: relative; margin: 200px auto; padding: 60px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #1818189c; z-index: 1000; } 
+.locModal { position: relative; margin: calc(100vw * 200 / 1920) auto; padding: calc(100vw * 60 / 1920); width: calc(100vw * 500/ 1920); height: calc(100vw * 550 / 1920); border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #1818189c; z-index: 1000; } 
 .locModal h4 { text-align: center; font-size: 24px; font-family: pSemi; } 
 
 .schBox { margin: 30px 0 10px 0; display: flex; align-items: center; justify-content: space-between; border-radius: 10px; background: #eee; } 
 .schBox .addLocTxt { width: 90%; height: 50px; padding: 0 20px; background: transparent; font-size: 15px; font-family: pMedium; } 
 .schBox .locSchBtn { margin-right: 20px; width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; } 
 
-.locAll { margin: 10px 0; height: 380px; overflow: auto; } 
+.locAll { margin: 10px 0; height: calc(100vw * 380 / 1920); overflow: auto; } 
 .locAll::-webkit-scrollbar { width: 12px; } 
 .locAll::-webkit-scrollbar-thumb { background-color: #999; border: 3px solid #fff; border-radius: 20px; } 
 .locAll::-webkit-scrollbar-track { background-color: transparent; }
@@ -110,8 +110,8 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .locModal input[name="ds"] { display: none; } 
 
 input[name="ds"] + label { width: 100%; position: relative; display: flex; align-items: center; justify-content: center; margin: 22px 0; padding-bottom: 20px; border-bottom: 1px solid var(--color-line); cursor: pointer; } 
-input[name="ds"] + label::before { content: ""; position: absolute; width: 27px; height: 27px; top: 0; left: 15px; background: url(../source/loc.png) center center; background-size: cover; } 
-input[name="ds"] + label span { width: 79%; margin-left: 33px; font-size: 18px; font-family: pSemi; } 
+input[name="ds"] + label::before { content: ""; position: absolute; width: calc(100vw * 27 /1920); height: calc(100vw * 27 /1920); top: calc(100vw * 2 / 1920); left: 15px; background: url(../source/loc.png) center center; background-size: cover; } 
+input[name="ds"] + label span { width: 78%; margin-left: calc(100vw * 33/ 1920); font-size: 18px; font-family: pSemi; } 
 input[name="ds"] + label .check { width: 25px; height: 25px; border: 2px solid #ddd; border-radius: 7px; } 
 
 input[name="ds"]:checked + label .check { position: relative; } 
