--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -64,7 +64,13 @@ to { opacity: 1; transform: none; }
 
 /* --------------- responsible --------------- */
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) { 
+ section { margin-top: 150px; } 
+ 
+ .frmLine div { width: 100%; justify-content: space-between; } 
+ .schFrm { width: 70%; margin-right: 0; } 
+ .schFrm input { width: 80%; } 
+
  .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
  .goDetail { width: 100%; } 
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
@@ -93,7 +99,7 @@ to { opacity: 1; transform: none; }
 #scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 50px; height: 50px; bottom: 90px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; } 
 #scrollTop::before { content: "\2303"; position: absolute; top: 7px; left: 15px; color: #171717; font-family: pLight; font-size: 25px; } 
 #scrollTop .topTxt { display: block; margin-top: 23px; font-size: 14px; } 
-}
+ }
  
  @media screen and (min-width: 1024px) { body { } 
  }
