--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -68,7 +68,13 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 
 /* --------------- responsible --------------- */
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
+ section { margin-top: 150px; } 
+ 
+ .frmLine div { width: 100%; justify-content: space-between; } 
+ .schFrm { width: 70%; margin-right: 0; } 
+ .schFrm input { width: 80%; } 
+
  .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
  .goDetail { width: 100%; } 
  .schOne { width: 100%; height: 100%; position: relative; margin-bottom: 20px; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
